# zcripts

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: build-and-publish.yml  build-on-push.yml
doc/example/: zcripts.service  zcriptsinit.mount
src/zcripts/: __init__.py  featureflag.py  zcripts_cli.py  zcripts_service.py  zcriptsinit_mount.py
src/zcripts/template/: __init__.py  zcripts_service.py  zcripts_upgrade_service.py  zcripts_upgrade_timer.py  zcriptsinit_mount.py
systemd/: zcripts.service
