[tool.poetry]
name = "zcripts"
version = "v0.2.21"
description = ""
authors = ["cory <121705+corydodt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "zcripts", from = "src" },
	]

[tool.poetry.dependencies]
python = "^3.9"
nuitka = "^2.0.2"
tomlkit = "^0.12.4"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"


[tool.poetry.scripts]
zcripts = "zcripts.zcripts_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
