[tool.poetry]
name = "zcripts"
version = "v0.5.0"
description = ""
authors = ["cory <121705+corydodt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "zcripts", from = "src" },
	]

[tool.poetry.dependencies]
python = "^3.9"
nuitka = "^2.3.1"
tomlkit = "^0.12.5"
questionary = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[tool.poetry.scripts]
zcripts = "zcripts.zcripts_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
